# perturbvi

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  README.rst  mkdocs.yml  pyproject.toml
docs/: authors.md  requirements.txt
docs/api/: families.md  infer.md  utils.md
src/perturbvi/: __init__.py  annotation.py  cli.py  common.py  factorloadings.py  guide.py  infer.py  io.py  log.py  sim.py  sparse.py  utils.py
src/susieguy/: __init__.py  annotation.py  common.py  factor.py  factorloadings.py  guide.py  infer.py  infer_design_matrix.py  infer_spike_slab.py  loading.py  sparse.py  utils.py
